<resources>
    <string name="app_name">R calculator pro</string>
    <string-array name="selector">
        <item>Ohm</item>
        <item>Kohm</item>
        <item>Mohm</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_blank_fragment3" />
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="setting">setting</string>
    <string name="more">more</string>
    <string name="share">share</string>
    <string name="rate">rate</string>
    <string name="about">about</string>
    <string name="valueToColor">value to color</string>
    <string name="colorToValue">color to value</string>
    <string name="smd">go to SMD</string>
    <string name="to">to</string>
    <string name="value">value</string>
    <string name="SMD">SMD</string>
    <string name="r">R</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="ce">CE</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="m">M</string>
    <string name="todo">TODO</string>
    <string name="equal">=</string>
    <string name="x1">X1Ω</string>
    <string name="x10">X10Ω</string>
    <string name="x100">X100Ω</string>
    <string name="x1k">X1kΩ</string>
    <string name="x10k">X10kΩ</string>
    <string name="x100k">X100kΩ</string>
    <string name="x1m">X1MΩ</string>
    <string name="gold">gold</string>
    <string name="silver">silver</string>
    <string name="_0_01">+-0.01</string>
    <string name="_0_1">+-0.1</string>
    <string name="_0_25">+-0.25</string>
    <string name="_0_5">+-0.5</string>
    <string name="_0_02">+-0.02</string>
    <string name="_0_05">+-0.05</string>
    <string name="_2tolerance">+-2</string>
    <string name="_1tolerance">+-1</string>
    <string name="_20">+-20%</string>
    <string name="x10m" />

    <string name="black">black</string>
    <string name="brown">brown</string>
    <string name="red">red</string>
    <string name="orange">orange</string>
    <string name="jaunt">jaunt</string>
    <string name="green">green</string>
    <string name="blue">blue</string>
    <string name="purple">purple</string>
    <string name="gray">gray</string>
    <string name="white">white</string>
    <string name="about_us">about us</string>
</resources>