<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SmdActivity">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal">

  <TextView
      android:id="@+id/valueOut1"
      android:layout_width="wrap_content"
      android:layout_height="80dp"
      android:layout_gravity="center_vertical"
    android:layout_marginTop="20dp"
      android:textSize="30sp"
    />
  <TextView
      android:id="@+id/valueOut2"
      android:layout_width="wrap_content"
      android:layout_height="80dp"
      android:layout_gravity="center_vertical"
    android:layout_marginTop="20dp"
      android:textSize="30sp"
    />
  <TextView
      android:id="@+id/valueOut3"
      android:layout_width="wrap_content"
      android:layout_height="80dp"
      android:layout_gravity="center_vertical"
    android:layout_marginTop="20dp"
      android:textSize="30sp"
    />
  <TextView
      android:id="@+id/valueOut4"
      android:layout_width="wrap_content"
      android:layout_height="80dp"
      android:layout_gravity="center_vertical"
    android:layout_marginTop="20dp"
      android:textSize="30sp"
   /><TextView
      android:id="@+id/tvSmdohm"
      android:layout_width="wrap_content"
      android:layout_height="80dp"
      android:layout_gravity="center_vertical"
    android:layout_marginTop="20dp"
      android:textSize="30sp"
   />
</LinearLayout>
  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="70dp"
      android:layout_gravity="center_horizontal"
      android:layout_marginBottom="15dp"
      android:background="@color/black"
      android:orientation="horizontal"
      >
    <RelativeLayout
        android:layout_width="20dp"
        android:layout_height="match_parent"
      android:background="#898E91"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

      <TextView
          android:id="@+id/value1"
          android:layout_width="15dp"
          android:layout_height="match_parent"
          android:layout_marginStart="1dp"
          android:gravity="center"
          android:textColor="@color/white"
          android:textSize="20sp" />
      <TextView
          android:id="@+id/value2"
          android:layout_width="15dp"
          android:layout_height="match_parent"
          android:layout_marginStart="1dp"
          android:gravity="center"
          android:textColor="@color/white"
          android:textSize="20sp" />
      <TextView
          android:id="@+id/value3"
          android:layout_width="15dp"
          android:layout_height="match_parent"
          android:layout_marginStart="1dp"
          android:gravity="center"
          android:textColor="@color/white"
          android:textSize="20sp" />
      <TextView
          android:id="@+id/value4"
          android:layout_width="15dp"
          android:layout_height="match_parent"
          android:layout_marginStart="1dp"
          android:gravity="center"
          android:textColor="@color/white"
          android:textSize="20sp" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="20dp"
        android:layout_height="match_parent"
      android:background="#898E91"
        android:gravity="end"
       />
  </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
      android:layout_weight="1"
        android:orientation="horizontal">

      <androidx.cardview.widget.CardView
          android:id="@+id/smd7"
          android:layout_width="0dp"
          android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1"
          android:clickable="true"
          android:focusable="true"
          android:foreground="?attr/selectableItemBackground"
          app:cardBackgroundColor="#8A8989"
          app:cardCornerRadius="7dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/_7"
            android:textColor="@color/black"
            android:textSize="20sp" />
      </androidx.cardview.widget.CardView>
      <androidx.cardview.widget.CardView
          android:id="@+id/smd8"
          android:layout_width="0dp"
          android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1"
          android:clickable="true"
          android:focusable="true"
          android:foreground="?attr/selectableItemBackground"
          app:cardBackgroundColor="#8A8989"
          app:cardCornerRadius="7dp" >

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/_8"
        android:textColor="@color/black"
        android:textSize="20sp"/>
      </androidx.cardview.widget.CardView>
      <androidx.cardview.widget.CardView
          android:id="@+id/smd9"
          android:layout_width="0dp"
          android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1"
          android:clickable="true"
          android:focusable="true"
          android:foreground="?attr/selectableItemBackground"
          app:cardBackgroundColor="#8A8989"
          app:cardCornerRadius="7dp" >

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/_9"
        android:textColor="@color/black"
        android:textSize="20sp"/>
      </androidx.cardview.widget.CardView>
      <androidx.cardview.widget.CardView
          android:id="@+id/smdClear"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_margin="2dp"
          android:layout_weight="1"
          android:clickable="true"
          android:focusable="true"
          android:foreground="?attr/selectableItemBackground"
          app:cardBackgroundColor="#5E5F60"
          app:cardCornerRadius="7dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ce"
            android:textColor="@color/black"
            android:textSize="20sp"/>
      </androidx.cardview.widget.CardView>
      <androidx.cardview.widget.CardView
          android:id="@+id/smdDelete"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_margin="2dp"
          android:layout_weight="1"
          android:clickable="true"
          android:focusable="true"
          android:foreground="?attr/selectableItemBackground"
          app:cardBackgroundColor="#5E5F60"
          app:cardCornerRadius="7dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@android:drawable/ic_input_delete"/>
      </androidx.cardview.widget.CardView>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
      android:layout_weight="1"
        android:orientation="horizontal">

      <androidx.cardview.widget.CardView
          android:id="@+id/smd4"
          android:layout_width="0dp"
          android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1"
          android:clickable="true"
          android:focusable="true"
          android:foreground="?attr/selectableItemBackground"
          app:cardBackgroundColor="#8A8989"
          app:cardCornerRadius="7dp" >

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/_4"
        android:textColor="@color/black"
        android:textSize="20sp"/>
      </androidx.cardview.widget.CardView>
      <androidx.cardview.widget.CardView
          android:id="@+id/smd5"
          android:layout_width="0dp"
          android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1"
          android:clickable="true"
          android:focusable="true"
          android:foreground="?attr/selectableItemBackground"
          app:cardBackgroundColor="#8A8989"
          app:cardCornerRadius="7dp" >

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/_5"
        android:textColor="@color/black"
        android:textSize="20sp"/>
      </androidx.cardview.widget.CardView>
      <androidx.cardview.widget.CardView
          android:id="@+id/smd6"
          android:layout_width="0dp"
          android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1"
          android:clickable="true"
          android:focusable="true"
          android:foreground="?attr/selectableItemBackground"
          app:cardBackgroundColor="#8A8989"
          app:cardCornerRadius="7dp">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/_6"
        android:textColor="@color/black"
        android:textSize="20sp"/>
      </androidx.cardview.widget.CardView>
      <androidx.cardview.widget.CardView
          android:id="@+id/smdM"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_margin="2dp"
          android:layout_weight="1"
          android:clickable="true"
          android:focusable="true"
          android:foreground="?attr/selectableItemBackground"
          app:cardBackgroundColor="#8A8989"
          app:cardCornerRadius="7dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/m"
            android:textColor="@color/black"
            android:textSize="20sp"/>
      </androidx.cardview.widget.CardView>
      <androidx.cardview.widget.CardView
          android:id="@+id/smdZ"
          android:layout_width="0dp"
          android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1"
          android:clickable="true"
          android:focusable="true"
          android:foreground="?attr/selectableItemBackground"
          app:cardBackgroundColor="#8A8989"
          app:cardCornerRadius="7dp" >

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Z"
        android:textColor="@color/black"
        android:textSize="20sp"/>
      </androidx.cardview.widget.CardView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
      android:layout_weight="1"
        android:orientation="horizontal">

      <androidx.cardview.widget.CardView
         android:id="@+id/smd1"
          android:layout_width="0dp"
          android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1"
          android:clickable="true"
          android:focusable="true"
          android:foreground="?attr/selectableItemBackground"
          app:cardBackgroundColor="#8A8989"
          app:cardCornerRadius="7dp" >

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/_1"
        android:textColor="@color/black"
        android:textSize="20sp"/>
      </androidx.cardview.widget.CardView>
      <androidx.cardview.widget.CardView
          android:id="@+id/smd2"
          android:layout_width="0dp"
          android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1"
          android:clickable="true"
          android:focusable="true"
          android:foreground="?attr/selectableItemBackground"
          app:cardBackgroundColor="#8A8989"
          app:cardCornerRadius="7dp">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/_2"
        android:textColor="@color/black"
        android:textSize="20sp"/>
      </androidx.cardview.widget.CardView>
      <androidx.cardview.widget.CardView
          android:id="@+id/smd3"
          android:layout_width="0dp"
          android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1"
          android:clickable="true"
          android:focusable="true"
          android:foreground="?attr/selectableItemBackground"
          app:cardBackgroundColor="#8A8989"
          app:cardCornerRadius="7dp">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/_3"
        android:textColor="@color/black"
        android:textSize="20sp"/>
      </androidx.cardview.widget.CardView>
      <androidx.cardview.widget.CardView
          android:id="@+id/smdR"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_margin="2dp"
          android:layout_weight="1"
          android:clickable="true"
          android:focusable="true"
          android:foreground="?attr/selectableItemBackground"
          app:cardBackgroundColor="#8A8989"
          app:cardCornerRadius="7dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/r"
            android:textColor="@color/black"
            android:textSize="20sp"/>
      </androidx.cardview.widget.CardView>
      <androidx.cardview.widget.CardView
          android:layout_width="0dp"
          android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1"
          android:clickable="true"
          android:focusable="true"
          android:foreground="?attr/selectableItemBackground"
          app:cardBackgroundColor="#8A8989"
          app:cardCornerRadius="7dp" >

      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
      android:layout_gravity="center"
        android:contentDescription="@string/todo"
          android:src="@android:drawable/ic_menu_info_details" />
      </androidx.cardview.widget.CardView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
      android:layout_weight="1"
        android:orientation="horizontal">

      <androidx.cardview.widget.CardView
          android:id="@+id/smdLine"
          android:layout_width="0dp"
          android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1"
          android:clickable="true"
          android:focusable="true"
          android:foreground="?attr/selectableItemBackground"
          app:cardBackgroundColor="#8A8989"
          app:cardCornerRadius="7dp" >

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="--"
        android:textColor="@color/black"
        android:textSize="20sp"/>
      </androidx.cardview.widget.CardView>
      <androidx.cardview.widget.CardView
          android:id="@+id/smd0"
          android:layout_width="0dp"
          android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1"
          android:clickable="true"
          android:focusable="true"
          android:foreground="?attr/selectableItemBackground"
          app:cardBackgroundColor="#8A8989"
          app:cardCornerRadius="7dp" >

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/_0"
        android:textColor="@color/black"
        android:textSize="20sp"/>
      </androidx.cardview.widget.CardView>
      <androidx.cardview.widget.CardView
          android:layout_width="0dp"
          android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1"
          android:clickable="true"
          android:focusable="true"
          android:foreground="?attr/selectableItemBackground"
          app:cardBackgroundColor="#8A8989"
          app:cardCornerRadius="7dp" >

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="--"
        android:textColor="@color/black"
        android:textSize="20sp"/>
      </androidx.cardview.widget.CardView>
      <androidx.cardview.widget.CardView
          android:id="@+id/smdeResultat"
          android:layout_width="0dp"
          android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1"
          android:clickable="true"
          android:focusable="true"
          android:foreground="?attr/selectableItemBackground"
          app:cardBackgroundColor="#2680EC"
          app:cardCornerRadius="7dp" >

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:text="@string/equal"
          android:textColor="@color/black"
          android:textSize="20sp" />
      </androidx.cardview.widget.CardView>
    </LinearLayout>

 </LinearLayout>